build: add r8 optimization and strict android release checks